# Metatrader5-Mac

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_connection.py  test_mt5_module.py  test_simple.py
.github/: FUNDING.yml
.github/workflows/: ci-audit.yml  ci-lint.yml
MQL5/Experts/MT5Bridge/: MT5Bridge.mq5  MT5BridgeClient.mq5  MT5BridgeSimple.mq5
MetaTrader5/: __init__.py  __main__.py  _bridge_server.py  _core.py  _core_simple.py  bridge_server.py  server.py
docs/: change_mt5_data_folder.md  troubleshooting_connection.md
examples/: basic_usage.py  fetch_btc_data.py  live_data_stream.py  live_stream_advanced.py  login_and_show_balance.py  test_btc_api.py
