[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "metatrader5-macos"
version = "5.0.5735"
description = "MetaTrader5 API for macOS via socket bridge"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MetaQuotes Ltd."},
    {name = "macOS Port Contributor"}
]
keywords = ["metatrader", "mt5", "forex", "trading", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/yourusername/metatrader5-macos"
Documentation = "https://www.mql5.com/en/docs/integration/python_metatrader5"
Repository = "https://github.com/yourusername/metatrader5-macos"
Issues = "https://github.com/yourusername/metatrader5-macos/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["MetaTrader5*"]
exclude = ["tests*", "MQL5*"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
